Fixed the reported RTL related alignment issues

--- a/admin-ui/src/app/core/header/header.component.scss
+++ b/admin-ui/src/app/core/header/header.component.scss
@@ -70,6 +70,11 @@
     }
   }
 }
+
+[dir*="rtl"] .profile {
+  text-align: end !important;
+}
+
 .profile {
   flex: 2;
   text-align: right;
